# confit

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  windows-cli-preview.yml
devlog/: README.md  production-readiness-round17.md  windows-cli-support.md
docs/: architecture.md  build-selection-template-schema.md  build-selection-workflow.md  cli-contract.md  cli-tui.md  coding-and-doc-rules.md  cutover-dry-run.md  delos-config-inventory.md  final-release-note.md  generators.md  implementation-rounds.md  local-build-and-test.md  parus-config-inventory.md  qstar-build-manifest-contract.md  release-candidate.md  resolution-dag.md  rollback.md  syntax-stability.md  toml-schema.md  tui-kconfiglib-analysis.md  tui-terminal-layout-reference.md  windows-cli-lane.md
include/confit/: compat.h  diagnostic.h  explain.h  generator.h  graph.h  host.h  model.h  parser.h  resolver.h  schema.h  status.h  tui.h  version.h
man/: confit.1
scripts/: confit-cutover-dry-run.sh  install-local.sh
src/cli/: main.c
src/compat/: compat.c
src/core/: diagnostic.c  model.c  status.c  version.c
src/explain/: explain.c
src/generator/: build_integration.c  config_header.c  reports.c  value_serialization.c
src/graph/: graph.c
src/host/: host_directory.c  host_file.c  host_io.c  host_path.c
src/parser/: parser.c  toml_scan.c  toml_scan.h
src/resolver/: resolver.c
src/schema/: schema.c
src/tui/: curses_frontend.c  profile_editor.c  schema_editor.c  tui.c  tui_common.c  tui_internal.h  tui_unsupported.c
tests/: run_tests.sh
tests/fixtures/: README.md
tests/fixtures/build-manifest/qstar-module-contract/: README.md  qstar.lua
tests/fixtures/compat/delos/config/: project.toml
tests/fixtures/compat/delos/config/compat/: parus-delos.toml
tests/fixtures/compat/delos/config/options/: runtime.toml
tests/fixtures/compat/delos/config/profiles/: parus-delos-debug.toml
tests/fixtures/compat/parus/config/: project.toml
tests/fixtures/compat/parus/config/options/: runtime.toml
tests/fixtures/compat/parus/config/profiles/: parus-delos-debug.toml
tests/fixtures/compat/rules/fail-forbids/: parus-delos.toml
tests/fixtures/compat/rules/fail-requires/: parus-delos.toml
tests/fixtures/graph/invalid/conflict-contradiction/config/: project.toml
tests/fixtures/graph/invalid/cycle/config/: project.toml
tests/fixtures/graph/invalid/forces-visible/config/: project.toml
tests/fixtures/graph/valid/large/config/: project.toml
tests/fixtures/host/: read_text.txt
tests/fixtures/host/list/: a.toml  b.toml  ignore.txt
tests/fixtures/realish/compat/: parus-delos.toml
tests/fixtures/realish/compat-negative/forbid-dcg/: parus-delos.toml
tests/fixtures/realish/delos/config/: project.toml
tests/fixtures/realish/delos/config/options/: build.toml  debug.toml  runtime.toml  target.toml
tests/fixtures/realish/delos/config/profiles/: debug.toml  parus-delos-debug.toml  parus-delos-mismatch.toml  release.toml  sim-dsh.toml
tests/fixtures/realish/delos/config/selection/: delos.toml
tests/fixtures/realish/delos/config/targets/: qemu-mps2-an500.toml  renode-nucleo-h753zi.toml  sim-dsh.toml
tests/fixtures/realish/parus/config/: project.toml
tests/fixtures/realish/parus/config/options/: boot.toml  build.toml  executor.toml  target.toml
tests/fixtures/realish/parus/config/profiles/: bringup.toml  parus-delos-debug.toml  parus-delos-mismatch.toml  qemu-aarch64.toml  rpi5-direct-dtb.toml
tests/fixtures/toml/invalid/: missing-equals.toml  unclosed-string.toml  unterminated-array.toml
tests/fixtures/toml/valid/: project.toml
tests/fixtures/tui/dependency-ux/config/: project.toml
tests/fixtures/tui/profile-editor/config/: project.toml
tests/fixtures/tui/schema-editor/config/: project.toml
tests/golden/: README.md
tests/golden/explain/: delos-debug-ddc.txt  delos-internal-debug-gate.txt
tests/golden/generator/: sim-dsh-config.cmake  sim-dsh-config.h  sim-dsh-config.qsm  sim-dsh-config.qst
tests/golden/realish/compat/: parus-delos-debug.json  parus-delos-mismatch.json
tests/golden/realish/delos/sim-dsh/: config.cmake  config.explain.txt  config.graph.json  config.h  config.inputs.json  config.qst  config.report.json
tests/golden/realish/parus/qemu-aarch64/: config.cmake  config.explain.txt  config.graph.json  config.h  config.inputs.json  config.qst  config.report.json
tests/golden/reports/: config.explain.txt  config.graph.json  config.inputs.json  config.report.json
tests/golden/resolver/: sim-dsh.json  sim-dsh.toml  sim-dsh.txt
tests/golden/tui/: profile-create.toml  profile-editor-edit.toml  schema-editor-tui-schema.toml
tests/integration/: round11_realish_delos.sh  round12_realish_parus.sh  round13_realish_compat.sh  round16_cli_workflow.sh  round16_cutover_dry_run.sh  round17_tui_smoke.sh  round18_tui_profile_editor.sh  round19_tui_profile_create.sh  round19_tui_schema_editor.sh  round20_stress.sh  round2_cli_only_lane.sh  round8_qstar_module_artifacts.sh
tests/integration_c/: test_cli_workflow.c
tests/manual/: round11-terminal-manual-qa.md  round14-terminal-manual-qa.md  round17-production-readiness.md  round18-final-readiness.md  round19-computer-use-transcript.md  round20-computer-use-qa.md  round4-tui-command-workflow-manual-qa.md  round7-v0.1.0-rc1-readiness.md  round9-build-selection-final-qa.md  round9-tui-menu-workflow-manual-qa.md  round9-tui-readability-manual-qa.md
tests/smoke/: round1_cli_smoke.sh
tests/support/: test_assert.c  test_assert.h  test_fs.c  test_fs.h  test_process.c  test_process.h
tests/unit/: test_compat.c  test_explain.c  test_generator.c  test_graph_builder.c  test_host_boundary.c  test_model.c  test_parser_adapter.c  test_reports.c  test_resolver.c  test_schema_loader.c  test_status_diagnostic.c
wiki/: 00-overview.md  01-install.md  02-cli-quickstart.md  03-project-layout.md  04-schema-guide.md  05-profile-target-guide.md  06-generation-guide.md  07-compat-guide.md  08-tui-guide.md  09-ai-usage-guide.md  10-troubleshooting.md  11-parus-delos-adoption.md  README.md
(+67 files in other folders)
